<resources>
    <string name="app_name">Team Profile</string>
    <string name="group_profiles">Team N Profiles</string>
    <string name="to_tianyi_zhou_s_page">To Tianyi Zhou\'s Page</string>
    <string name="this_is_my_introduction">Tianyi Zhou</string>
    <string name="my_picture">my picture</string>
    <string name="description">TRU CS student, I am a huge fun of android developing."\n""\n"Since this repo is going to the public, I prefer not to put a portrait.</string>
    <string name="lab_3_team_profile_assignment_for_comp2160">Lab 3 team profile assignment for COMP2160</string>
    <string name="to_ssu_ting_hung_s_page">To Ssu-Ting Hung\'s Page</string>
    <string name="hung_introduction">Ssu-Ting Hung</string>
    <string name="hung_description">I have two cats."\n\n"Both of them are Maine Coon mix, so they are a little huge."\n""\n"Cats are always right!</string>
    <string name="hung_cat_image">hung_cat_image</string>
    <string name="to_bruce_weng_s_page">TO BRUCE WENG\'S PAGE</string>
    <string name="bruce_s_image">Bruce\'s image</string>
    <string name="tv_BW_Header">Bruce Weng</string>
    <string name="tv_BW_Intro">\"Oh? You\'re approaching me? Instead of running away, you\'re coming right to me?\"\n\t\t\t\t\t\t\t\t\t\t\t\t\t\t\t\t\t\tDio\n\nTRU student, love drawing and gaming.</string>
    <string name="to_robert_heller_s_page">To Robert Heller\'s Page</string>
    <string name="robert_heller">Robert Heller</string>
    <string name="robertpic">Robertpic</string>
    <string name="hello_i_am_a_computer_science_student_at_tru">Hello, I am a computer science student at TRU.</string>
    <string name="i_like_birds">I like birds.</string>
    <string name="description_title_hung">Description</string>
    <string name="degree_title_hung">Degree</string>
    <string name="bachelor_hung">(Bachelor)</string>
    <string name="cs_hung">Computer Scienece</string>
    <string name="description_01">Description</string>
    <string name="description_rob">Description</string>
    <string name="computer_science_student_at_tru_i_like_birds">Computer science student at TRU. I like birds.</string>
    <string name="robspic">RobsPic</string>
</resources>